[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/character.gd" type="Script" id=1]
[ext_resource path="res://textures/helmet.png" type="Texture" id=2]
[ext_resource path="res://textures/body-armor.png" type="Texture" id=3]
[ext_resource path="res://textures/character.png" type="Texture" id=4]
[ext_resource path="res://textures/ui/arrow.png" type="Texture" id=5]
[ext_resource path="res://scenes/sprites/weapons.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Rocket" ],
"method": "foot_fx"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 0, 6 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Dust" ],
"method": "foot_fx"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ), Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 18, 17, 16, 15, 14, 13, 12, 11, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShapeBody:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ShapeHead:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 2 ],
"method": "set_spawn_state"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AimRay:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Weapon:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.753906, 0.0971832, 0.0971832, 1 )

[sub_resource type="StyleBoxFlat" id=9]

[sub_resource type="Animation" id=10]
resource_name = "Arrow"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -25 ), Vector2( 0, -40 ), Vector2( 0, -25 ), Vector2( 0, -40 ), Vector2( 0, -25 ), Vector2( 0, -40 ), Vector2( 0, -25 ), Vector2( 0, -40 ), Vector2( 0, -25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 2,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ) ]
}

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.27451, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.437011, 1, 1, 1, 0.196078 )

[node name="Character" type="KinematicBody2D"]
collision_layer = 1025
collision_mask = 0
script = ExtResource( 1 )

[node name="Helmet" type="Sprite" parent="."]
visible = false
modulate = Color( 0.808594, 0.500238, 0.252686, 1 )
z_index = 1
texture = ExtResource( 2 )
vframes = 5
hframes = 4

[node name="Vest" type="Sprite" parent="."]
visible = false
modulate = Color( 0.445313, 0.318845, 0.100891, 1 )
z_index = 1
texture = ExtResource( 3 )
vframes = 5
hframes = 4

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
vframes = 5
hframes = 4
frame = 4

[node name="Weapon" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 6 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Run = SubResource( 4 )
anims/Spawn = SubResource( 5 )
next/Spawn = "Idle"

[node name="ShapeBody" type="CollisionShape2D" parent="."]
position = Vector2( -0.108553, 6.44308 )
scale = Vector2( 0.611886, 0.95717 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShapeHead" type="CollisionShape2D" parent="."]
position = Vector2( 0.53804, -4.07695 )
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -8.0
margin_top = -15.0
margin_right = 8.0
margin_bottom = -13.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nickname" type="Label" parent="."]
visible = false
margin_left = -59.0
margin_top = -33.0
margin_right = 59.0
margin_bottom = -19.0
text = "Nickname"
align = 1
clip_text = true

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -25 )
texture = ExtResource( 5 )

[node name="Anim" type="AnimationPlayer" parent="Arrow"]
anims/Arrow = SubResource( 10 )

[node name="AimRay" type="Line2D" parent="."]
visible = false
width = 2.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 11 )
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
